Menambahkan Info Mahasiswa di Dashaboard Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Absensi Online</string>
+    <string name="app_name">Presensi Online PNM</string>
     <string name="logout">LOGOUT</string>
     <string name="header_logo">Mahasiswa Politeknik Negeri Madiun</string>
     <string name="title_app">DASHBOARD PRESENSI</string>
@@ -14,4 +14,6 @@
     <string name="txt_login">LOGIN</string>
     <string name="txt_question1">Buka Sistem Informasi Akademik PNM?</string>
     <string name="txt_siakad">Siakad</string>
+    <string name="info_kelas">Info Kelas</string>
+    <string name="nameMahasiswa">Nama : </string>
 </resources>
